refactor: use of opaque types and add tests

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -6,4 +6,5 @@ align.tokens = [
   {code = "%", owner = "Term.ApplyInfix"},
   {code = "%%", owner = "Term.ApplyInfix"}
 ]
-version = 2.6.0
+runner.dialect = scala3
+version = 3.6.1
